Working on the UI COmponents

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -367,7 +367,7 @@ small,
 /* Login */
 
 .osahan-login-left {
-    background: url(../img/banner-img.jpg);
+    background: url(../img/chow-auth-bg.jpg);
     background-size: cover;
     height: 100vh;
 }
